<resources>
    <string name="app_name">LearningAndroid</string>

    <!-- homeTitle  -->
    <string name="homeTitle">Discoverly</string>

    <!-- Sign in to Spotify button  -->
    <string name="signInSpotify">Sign Into Spotify</string>

    <!-- Start Saving button -->
    <string name="startSavingButton">Start Saving</string>

    <!-- Sign out button-->
    <string name="signOutButton">Sign Out Button</string>

    <!-- Pause Saving button-->
    <string name="pauseSavingButton">Pause Saving Button</string>

    <!-- View Playlist button-->
    <string name="viewPlaylistButton">View Playlist Button</string>

    <string name="back">backButton</string>

    <string name="exportAll">Export</string>
    <string name="select_all">Select All</string>
    <string name="unselect_all">Unselect All</string>
    <string name="view_playlists">View Playlists</string>
    <string name="cb1">Playlist 1</string>
    <string name="cb2">Playlist 2</string>
    <string name="cb3">Playlist 3</string>
    <string name="cb4">Playlist 4</string>
    <string name="cb5">Playlist 5</string>
    <string name="playlist6">Playlist6</string>
    <string name="view_previous_sessions">View previous sessions</string>
    <string name="todo">TODO</string>


</resources>