<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight = "1"
        android:id = "@+id/linearlayoutbuttons"
        android:orientation = "horizontal"

        >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="200dp"
            android:layout_height=
            android:layout_marginTop="30dp"
            android:layot_gravity = "center"
            android:text="@string/homeTitle"
            android:textColor="@color/white"
            android:textSize="48sp"
            android:textStyle="bold" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#9FEF34"
            android:onClick="goBacktoMenu"
            android:text="@string/back" />

        <Button
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.901"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.877"
            android:layout_width="109dp"
            android:layout_height="35dp"
            android:background="#9FEF34"
            android:text="@string/exportAll" />

        <Button
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.098"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.877"
            android:layout_width="137dp"
            android:layout_height="35dp"
            android:background="#9FEF34"
            android:onClick="selectAll"
            android:text="@string/select_all" />

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="#9FEF34"
            android:text="@string/unselect_all"
            android:onClick="unselectAll"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.901"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.466" />


    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </LinearLayout>
    </ScrollView>
</LinearLayout>